# JTUDZK

./: CMakeLists.txt
dependencies/: CMakeLists.txt
dependencies/draw/: draw.h
lab/1/: CMakeLists.txt  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp
